--- a/views/css/front.css
+++ b/views/css/front.css
@@ -25,3 +25,53 @@
 * Don't forget to prefix your containers with your own identifier
 * to avoid any conflicts with others containers.
 */
+
+.progress {
+    position: relative;
+    width: 100%;
+    background: none;
+    border: 0;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    pointer-events: none;
+}
+    progress {
+      position: relative;
+      display: block;
+      height: 20px;
+      width: 100%;
+      border: 0;
+      background-color: rgb(201,201,201);
+      -webkit-appearance: none;
+      border-radius: 2rem;
+
+    }
+  
+    ::-moz-progress-bar {
+      background: rgb(252,136,181);
+      border-radius: 2rem;
+    }
+  
+    ::-webkit-progress-bar {
+      background-color: transparent;
+    }
+  
+    ::-webkit-progress-value {
+      background: rgb(252,136,181);
+      border-radius: 2rem;
+    }
+    
+    .animal {
+      position: absolute;
+      display: block;
+      top: -1.8rem;
+      left: calc(var(--move) - 1rem);
+      transform: scaleX(-1);
+      font-size: 4rem;
+      z-index: 1;
+      top: -5px;
+    }
+  
+  
+  
